--- a/thesis.tex
+++ b/thesis.tex
@@ -105,7 +105,7 @@ Last and not least, I would like to applaud myself and give myself some credit f
 \include{3framework-overview}
 \include{4vehicle-semantics-extraction}
 \include{5retrieval-module}
-%\include{6conclusion}
+\include{6conclusion}
 
 \appendix
 \include{sample-appen-manual}
